# fuel-core-inspector

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: nightly.yml
src/lib/: cli.rs  columns.rs  databases.rs  lib.rs  printer.rs
src/lib/columns/: compression.rs  gas_price.rs  off_chain.rs  on_chain.rs  relayer.rs
