[package]
name = "fuel-core-inspector"
version = "0.43.0" # pinned to the fuel-core version
edition = "2024"
rust-version =  "1.85.0"

[[bin]]
name = "fuel-core-inspector"
path = "src/bin/main.rs"

[lib]
name = "fuel_core_inspector"
path = "src/lib/lib.rs"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.37", default-features = false, features = ["derive", "std"] }
enum-iterator = { version = "2.1.0", default-features = false }
fuel-core = { version = "0.43.0", default-features = false, features = ["rocksdb", "test-helpers", "relayer"] }
fuel-core-storage = { version = "0.43.0", default-features = false, features = ["std"] }
fuel-core-compression-service = { version = "0.43.0", default-features = false }
fuel-core-gas-price-service = { version = "0.43.1", default-features = false }
fuel-core-relayer = { version = "0.43.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
pretty-hex = { version = "0.4.1", default-features = false, features = ["alloc"] }
